[package]
name = "quote"
version = "1.0.28" # don't forget to update html_root_url, version in readme for breaking changes
authors = ["David Tolnay <dtolnay@gmail.com>"]
autobenches = false
categories = ["development-tools::procedural-macro-helpers"]
description = "Quasi-quoting macro quote!(...)"
documentation = "https://docs.rs/quote/"
edition = "2018"
keywords = ["macros", "syn"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/quote"
rust-version = "1.31"

[dependencies]
proc-macro2 = { git = "https://github.com/TitusVM/proc-macro2-sgx.git", optional = true, default-features = false, features = ["mesalock_sgx"] }
sgx_tstd = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", optional = true }

[dev-dependencies]
rustversion = "1.0"
trybuild = { version = "1.0.66", features = ["diff"] }

[features]
default = ["proc-macro-asdf", "mesalock_sgx", "std"]
std = ["mesalock_sgx"]
mesalock_sgx = ["std", "sgx_tstd"]
# Disabling the proc-macro feature removes the dynamic library dependency on
# libproc_macro in the rustc compiler.
proc-macro-asdf = ["proc-macro2"]

[lib]
doc-scrape-examples = false

[workspace]
members = ["benches"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
